--- a/experiencia-gastronomica.html
+++ b/experiencia-gastronomica.html
@@ -48,8 +48,7 @@
         <div id="mobile-menu" class="mobile-menu absolute top-full left-0 w-full bg-teal-700 text-white py-4"
             style="display: none;">
             <ul class="text-center">
-				<li><a href="index.html" class="hover:text-teal-300 transition"
-                        data-translate="inicio">Inicio</a></li>
+                <li><a href="index.html" class="hover:text-teal-300 transition" data-translate="inicio">Inicio</a></li>
                 <li><a href="tours-historicos.html" class="hover:text-teal-300 transition"
                         data-translate="historic-tours">Tours Históricos</a></li>
                 <li><a href="experiencia-gastronomica.html" class="hover:text-teal-300 transition"
@@ -74,7 +73,7 @@
                 <img src="path/to/intro.jpg" alt="Intro" class="w-full h-80 object-cover rounded-lg shadow-md">
                 <div>
                     <h3 class="text-3xl font-semibold text-teal-700 mb-4">Intro</h3>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum,
+                    <p class="text-gray-700" data-translate="introduction-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum,
                         lacus at tincidunt gravida, justo sem porta ligula, non dignissim nisl nunc at elit. Duis ut
                         sapien nec neque fermentum suscipit.</p>
                 </div>
@@ -86,7 +85,7 @@
             <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
                 <div>
                     <h3 class="text-3xl font-semibold text-teal-700 mb-4">Centenary Tabernas of Madrid</h3>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a urna non
+                    <p class="text-gray-700" data-translate="centenary-tabernas-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a urna non
                         eros fermentum tincidunt. Integer ut ex sed libero luctus pretium. Vivamus gravida nunc non
                         lectus sagittis, id congue turpis fermentum.</p>
                 </div>
@@ -101,10 +100,8 @@
                 <img src="path/to/terrace-food.jpg" alt="Terrace Gastronomy"
                     class="w-full h-80 object-cover rounded-lg shadow-md">
                 <div>
-                    <h3 class="text-3xl font-semibold text-teal-700 mb-4">Terrace Hopping – Gastronómica</h3>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo,
-                        libero vel cursus ultrices, tellus ante gravida est, a faucibus felis libero nec justo. Praesent
-                        eget nulla non orci faucibus fermentum.</p>
+                    <h3 class="text-3xl font-semibold text-teal-700 mb-4">Terrace Hopping - Gastronómica</h3>
+                    <p class="text-gray-700" data-translate="terrace-hopping"></p>
                 </div>
             </div>
         </section>
@@ -131,9 +128,7 @@
                 <div>
                     <h3 class="text-3xl font-semibold text-teal-700 mb-4">Tapas Youth Culture Night in Malasaña
                         Neighbourhood</h3>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum
-                        efficitur nisi, sed vehicula sapien suscipit et. In venenatis massa in nunc porta lacinia.
-                        Vivamus pulvinar, neque ut ullamcorper pulvinar.</p>
+                    <p class="text-gray-700" data-translate="tapas-malasaña-desc"></p>
                 </div>
             </div>
         </section>
@@ -143,9 +138,7 @@
             <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
                 <div>
                     <h3 class="text-3xl font-semibold text-teal-700 mb-4">Real Markets Tour</h3>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris finibus est
-                        vitae quam volutpat, sit amet mattis erat tincidunt. Aliquam erat volutpat. Sed eu leo nec
-                        mauris consequat tempor.</p>
+                    <p class="text-gray-700" data-translate="real-market-desc"></p>
                 </div>
                 <img src="path/to/market.jpg" alt="Real Markets" class="w-full h-80 object-cover rounded-lg shadow-md">
             </div>
@@ -197,7 +190,7 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="js/translate.js"></script>
+    <script src="js/translateExperienciaGastronomica.js"></script>
     <script src="js/translateDropdown.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/carousel.js"></script>
