--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-white">
+<body class="bg-[#F6F5F4]">
     <nav
         class="navbar fixed top-0 left-0 w-full bg-teal-700 text-white py-4 px-6 shadow-lg opacity-0 -translate-y-full z-10">
         <div class="container mx-auto flex justify-between items-center">
@@ -88,14 +88,18 @@
         </div>
     </section>
 
-    <section id="services" data-aos="fade-up" class="py-20 px-6 text-center bg-white Container_containerlg__tE5_m">
+    <section id="services" data-aos="fade-up" class="py-20 px-6 text-center bg-[#F6F5F4] Container_containerlg__tE5_m">
         <h2 class="text-4xl font-semibold text-teal-700" data-translate="our-services">Nuestros Servicios</h2>
         <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
             <!-- Tour Histórico -->
             <div
-                class="bg-white rounded-2xl shadow-lg p-8 transition transform hover:-translate-y-2 hover:shadow-[0_6px_30px_rgba(13,148,136,0.5)]">
-                <i class="fas fa-history text-teal-600 text-5xl mb-4"></i>
+                class="bg-white rounded-2xl  p-8 transition transform hover:-translate-y-2 hover:shadow-[0_6px_30px_rgba(13,148,136,0.5)]">
+                <div class="flex items-center justify-center w-20 h-20 rounded-full mb-4 mx-auto"
+                    style="background-color: #CCFBF1;">
+                    <i class="fas fa-archway    text-teal-600 text-3xl"></i>
+                </div>
+
                 <h3 class="text-2xl font-semibold text-teal-600" data-translate="historic-tours">Tours Históricos</h3>
                 <p class="text-gray-600 mt-3" data-translate="historic-desc">Explora la historia de Madrid con
                     recorridos guiados únicos.</p>
@@ -106,8 +110,13 @@
 
             <!-- Experiencia Gastronómica -->
             <div
-                class="bg-white rounded-2xl shadow-lg p-8 transition transform hover:-translate-y-2 hover:shadow-[0_6px_30px_rgba(13,148,136,0.5)]">
-                <i class="fas fa-utensils text-teal-600 text-5xl mb-4"></i>
+                class="bg-white rounded-2xl p-8 transition transform hover:-translate-y-2 hover:shadow-[0_6px_30px_rgba(13,148,136,0.5)]">
+                <div class="flex items-center justify-center w-20 h-20 rounded-full mb-4 mx-auto"
+                    style="background-color: #CCFBF1;">
+                    <i class="fas fa-utensils text-teal-700 text-3xl"></i>
+                </div>
+
+
                 <h3 class="text-2xl font-semibold text-teal-600" data-translate="gastronomy-experience">Experiencia
                     Gastronómica</h3>
                 <p class="text-gray-600 mt-3" data-translate="gastronomy-desc">Disfruta de la auténtica cocina madrileña
@@ -119,8 +128,11 @@
 
             <!-- Eventos y Cultura -->
             <div
-                class="bg-white rounded-2xl shadow-lg p-8 transition transform hover:-translate-y-2 hover:shadow-[0_6px_30px_rgba(13,148,136,0.5)]">
-                <i class="fas fa-music text-teal-600 text-5xl mb-4"></i>
+                class="bg-white rounded-2xl p-8 transition transform hover:-translate-y-2 hover:shadow-[0_6px_30px_rgba(13,148,136,0.5)]">
+                <div class="flex items-center justify-center w-20 h-20 rounded-full mb-4 mx-auto"
+                    style="background-color: #CCFBF1;">
+                    <i class="fas fa-music text-teal-600 text-3xl"></i>
+                </div>
                 <h3 class="text-2xl font-semibold text-teal-600" data-translate="events-culture">Eventos y Cultura</h3>
                 <p class="text-gray-600 mt-3" data-translate="events-desc">Descubre conciertos, festivales y
                     espectáculos en Madrid.</p>
@@ -131,11 +143,14 @@
         </div>
 
         <div class="mt-10">
-            <!-- Card -->
+            <!-- Pinta y cata -->
             <div class="flex justify-center">
                 <div
-                    class="bg-white rounded-2xl shadow-lg p-8 transition transform hover:-translate-y-2 hover:shadow-[0_6px_30px_rgba(13,148,136,0.5)] w-full max-w-md">
-                    <i class="fas fa-music text-teal-600 text-5xl mb-4"></i>
+                    class="bg-white rounded-2xl p-8 transition transform hover:-translate-y-2 hover:shadow-[0_6px_30px_rgba(13,148,136,0.5)] w-full max-w-md">
+                    <div class="flex items-center justify-center w-20 h-20 rounded-full mb-4 mx-auto"
+                        style="background-color: #CCFBF1;">
+                        <i class="fas fa-palette  text-teal-600 text-3xl"></i>
+                    </div>
                     <h3 class="text-2xl font-semibold text-teal-600" data-translate="pinta-cata">Pinta y Cata</h3>
                     <p class="text-gray-600 mt-3" data-translate="pinta-cata-desc"></p>
                     <a href="pinta-cata.html"
@@ -147,98 +162,106 @@
     </section>
 
     <section id="testimonials" data-aos="fade-up" class="py-20 px-6 bg-teal-100">
-        <h2 class="text-4xl font-semibold text-teal-700 text-center" data-translate="testimonials-title">
-            Lo que dicen nuestros clientes
-        </h2>
+        <div class="max-w-[1280px] w-full mx-auto">
+            <h2 class="text-4xl font-semibold text-teal-700 text-center" data-translate="testimonials-title">
+                Lo que dicen nuestros clientes
+            </h2>
 
-        <!-- Swiper -->
-        <div class="swiper mt-10">
-            <div class="swiper-wrapper py-6">
+            <!-- Swiper -->
+            <div class="swiper mt-10">
+                <div class="swiper-wrapper py-6">
 
-                <!-- Testimonial Slide 1 -->
-                <div class="swiper-slide bg-white shadow-lg rounded-2xl p-8 text-center">
-                    <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
-                    <p class="text-gray-600" data-translate="testimonial-1">"My daughter and I had an amazing tour with
-                        Petra..."</p>
-                    <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-1">Allegra Schorr</p>
-                    <p class="text-gray-500" data-translate="testimonial-location-1">New York, USA</p>
-                </div>
-
-                <!-- Testimonial Slide 2 -->
-                <div class="swiper-slide bg-white shadow-lg rounded-2xl p-8 text-center">
-                    <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
-                    <p class="text-gray-600" data-translate="testimonial-2">"We had a great day with Petra..."</p>
-                    <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-2">Betsy Teutsch</p>
-                    <p class="text-gray-500" data-translate="testimonial-location-2">Mount Airy, Pennsylvania</p>
-                </div>
-
-                <!-- Testimonial Slide 3 -->
-                <div class="swiper-slide bg-white shadow-lg rounded-2xl p-8 text-center">
-                    <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
-                    <p class="text-gray-600" data-translate="testimonial-3">"Our tour in Madrid far exceeded my
-                        expectations..."</p>
-                    <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-3">Rose Kelly</p>
-                    <p class="text-gray-500" data-translate="testimonial-location-3">Philadelphia, Pennsylvania</p>
-                </div>
-
-                <!-- Testimonial Slide 4 -->
-                <div class="swiper-slide bg-white shadow-lg rounded-2xl p-8 text-center">
-                    <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
-                    <p class="text-gray-600" data-translate="testimonial-4">"Thanks again for a wonderful 2 days. We
-                        love your knowledge and your enthusiasm for Madrid!We really enjoyed traveling with you. And
-                        Segovia was great. Come for the acuaduct and stay for the castles and the beautiful scenery.
-                        Thanks again for making our trip so nice..."</p>
-                    <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-4">Alan & Peggy</p>
-                    <p class="text-gray-500" data-translate="testimonial-location-4"></p>
-                </div>
-
-                <!-- Article Excerpt Slide 1 -->
-                <div class="swiper-slide bg-white shadow-lg rounded-2xl p-8 text-left">
-                    <div class="flex justify-center mb-4">
-                        <i class="fas fa-newspaper text-teal-600 text-3xl"></i>
+                    <!-- Testimonial Slide 1 -->
+                    <div class="swiper-slide bg-white rounded-2xl p-8 text-center">
+                        <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
+                        <p class="text-gray-600" data-translate="testimonial-1">"My daughter and I had an amazing tour
+                            with
+                            Petra..."</p>
+                        <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-1">Allegra Schorr
+                        </p>
+                        <p class="text-gray-500" data-translate="testimonial-location-1">New York, USA</p>
                     </div>
 
-                    <h3 class="text-xl font-semibold text-teal-700 mb-2" data-translate="testimonial-article-title-1">
-                        "Still haven't had enough of these people"</h3>
-                    <p class="text-gray-600 mb-4" data-translate="testimonial-article-content-1">Petra Pimminger has
-                        been guiding tourists through Madrid for ten years. In an interview, she explains that it
-                        requires a lot of patience and people skills..</p>
-                    <a href="https://www.derstandard.at/story/2956446/hab-noch-immer-nicht-genug-von-den-leuten"
-                        target="_blank" class="text-sm text-teal-700 underline"
-                        data-translate="testimonial-article-readMore">Leer
-                        artículo completo</a>
-                    <p class="mt-4 font-semibold text-teal-600">Redaktion</p>
-                    <p class="text-gray-500">Der Standard</p>
-                </div>
-
-                <!-- Article Excerpt Slide 2 -->
-                <div class="swiper-slide bg-white shadow-lg rounded-2xl p-8 text-left">
-                    <div class="flex justify-center mb-4">
-                        <i class="fas fa-newspaper text-teal-600 text-3xl"></i>
+                    <!-- Testimonial Slide 2 -->
+                    <div class="swiper-slide bg-white rounded-2xl p-8 text-center">
+                        <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
+                        <p class="text-gray-600" data-translate="testimonial-2">"We had a great day with Petra..."</p>
+                        <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-2">Betsy Teutsch
+                        </p>
+                        <p class="text-gray-500" data-translate="testimonial-location-2">Mount Airy, Pennsylvania</p>
                     </div>
 
-                    <h3 class="text-xl font-semibold text-teal-700 mb-2" data-translate="testimonial-article-title-2">A
-                        Culinary Journey Through Madrid</h3>
-                    <p class="text-gray-600 mb-4" data-translate="testimonial-article-content-2">Join Petra on a
-                        gastronomic adventure, exploring the flavors of
-                        Madrid's traditional and modern cuisine in this immersive tour experience.</p>
-                    <a href="https://www.derstandard.at/story/2000004635829/die-floehe-in-francos-filz-auf-den-spuren-der-movida"
-                        target="_blank" class="text-sm text-teal-700 underline"
-                        data-translate="testimonial-article-readMore">Leer
-                        artículo completo</a>
-                    <p class="mt-4 font-semibold text-teal-600">Ulf Lippitz</p>
-                    <p class="text-gray-500">Der Standard</p>
+                    <!-- Testimonial Slide 3 -->
+                    <div class="swiper-slide bg-white rounded-2xl p-8 text-center">
+                        <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
+                        <p class="text-gray-600" data-translate="testimonial-3">"Our tour in Madrid far exceeded my
+                            expectations..."</p>
+                        <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-3">Rose Kelly</p>
+                        <p class="text-gray-500" data-translate="testimonial-location-3">Philadelphia, Pennsylvania</p>
+                    </div>
+
+                    <!-- Testimonial Slide 4 -->
+                    <div class="swiper-slide bg-white rounded-2xl p-8 text-center">
+                        <i class="fas fa-quote-left text-teal-600 text-3xl mb-4"></i>
+                        <p class="text-gray-600" data-translate="testimonial-4">"Thanks again for a wonderful 2 days. We
+                            love your knowledge and your enthusiasm for Madrid!We really enjoyed traveling with you. And
+                            Segovia was great. Come for the acuaduct and stay for the castles and the beautiful scenery.
+                            Thanks again for making our trip so nice..."</p>
+                        <p class="mt-4 font-semibold text-teal-600" data-translate="testimonial-name-4">Alan & Peggy</p>
+                        <p class="text-gray-500" data-translate="testimonial-location-4"></p>
+                    </div>
+
+                    <!-- Article Excerpt Slide 1 -->
+                    <div class="swiper-slide bg-white rounded-2xl p-8 text-left">
+                        <div class="flex justify-center mb-4">
+                            <i class="fas fa-newspaper text-teal-600 text-3xl"></i>
+                        </div>
+
+                        <h3 class="text-xl font-semibold text-teal-700 mb-2"
+                            data-translate="testimonial-article-title-1">
+                            "Still haven't had enough of these people"</h3>
+                        <p class="text-gray-600 mb-4" data-translate="testimonial-article-content-1">Petra Pimminger has
+                            been guiding tourists through Madrid for ten years. In an interview, she explains that it
+                            requires a lot of patience and people skills..</p>
+                        <a href="https://www.derstandard.at/story/2956446/hab-noch-immer-nicht-genug-von-den-leuten"
+                            target="_blank" class="text-sm text-teal-700 underline"
+                            data-translate="testimonial-article-readMore">Leer
+                            artículo completo</a>
+                        <p class="mt-4 font-semibold text-teal-600">Redaktion</p>
+                        <p class="text-gray-500">Der Standard</p>
+                    </div>
+
+                    <!-- Article Excerpt Slide 2 -->
+                    <div class="swiper-slide bg-white rounded-2xl p-8 text-left">
+                        <div class="flex justify-center mb-4">
+                            <i class="fas fa-newspaper text-teal-600 text-3xl"></i>
+                        </div>
+
+                        <h3 class="text-xl font-semibold text-teal-700 mb-2"
+                            data-translate="testimonial-article-title-2">A
+                            Culinary Journey Through Madrid</h3>
+                        <p class="text-gray-600 mb-4 text-sm" data-translate="testimonial-article-content-2">Join Petra
+                            on a
+                            gastronomic adventure, exploring the flavors of
+                            Madrid's traditional and modern cuisine in this immersive tour experience.</p>
+                        <a href="https://www.derstandard.at/story/2000004635829/die-floehe-in-francos-filz-auf-den-spuren-der-movida"
+                            target="_blank" class="text-sm text-teal-700 underline"
+                            data-translate="testimonial-article-readMore">Leer
+                            artículo completo</a>
+                        <p class="mt-4 font-semibold text-teal-600">Ulf Lippitz</p>
+                        <p class="text-gray-500">Der Standard</p>
+                    </div>
                 </div>
+
+                <!-- Swiper Navigation -->
+                <div class="swiper-button-next text-teal-700"></div>
+                <div class="swiper-button-prev text-teal-700"></div>
+                <div class="swiper-pagination mt-4"></div>
             </div>
-
-            <!-- Swiper Navigation -->
-            <div class="swiper-button-next text-teal-700"></div>
-            <div class="swiper-button-prev text-teal-700"></div>
-            <div class="swiper-pagination mt-4"></div>
         </div>
     </section>
 
-
+    <!-- Descubre Madrid Section-->
     <section class="py-16 px-6 bg-white" data-aos="fade-up">
         <h2 class="text-3xl font-semibold text-teal-700 text-center mb-12" data-translate="carousel-title">Descubre
             Madrid</h2>
